CheckPoint - cg3cacae33

--- a/tic_tac_toe_frontend/assets/implemented-updates-33-19416.html
+++ b/tic_tac_toe_frontend/assets/implemented-updates-33-19416.html
@@ -9,15 +9,12 @@
 </head>
 <body>
   <div class="screen implemented-updates-33-19416" role="main" aria-label="Implemented updates">
-    <!-- Text block from node 33:19418 -->
+    <!-- Text block from node 33:19418 (typo_35) -->
     <h1 class="updates-text" aria-label="More use cases text">
-      More use cases.
-      <br>
-      Date range presets (Last 30, 60, 90 days, etc).
-      <br>
-      Double-view calendar.
-      <br>
-      Dark mode.
+More use cases.
+Date range presets (Last 30, 60, 90 days, etc).
+Double-view calendar.
+Dark mode.
     </h1>
 
     <!-- Image from node 33:19506 -->
